WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226673
copy/paste error in rareNonInheritedDataChangeRequiresLayout
https://bugs.webkit.org/show_bug.cgi?id=226673
Summary
copy/paste error in rareNonInheritedDataChangeRequiresLayout
Cameron McCormack (:heycam)
Reported
2021-06-04 20:28:34 PDT
Resulting in unnecessary relayout when we restyle an element with `aspect-ratio: a / b` (where a != b), even when the aspect-ratio value didn't change.
Attachments
Patch
(3.29 KB, patch)
2021-06-04 21:20 PDT
,
Cameron McCormack (:heycam)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-06-04 20:30:25 PDT
<
rdar://problem/78897526
>
Cameron McCormack (:heycam)
Comment 2
2021-06-04 21:20:59 PDT
Created
attachment 430642
[details]
Patch
Rob Buis
Comment 3
2021-06-04 22:08:40 PDT
Comment on
attachment 430642
[details]
Patch Oops!
EWS
Comment 4
2021-06-05 00:28:23 PDT
Committed
r278524
(
238523@main
): <
https://commits.webkit.org/238523@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430642
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug