Diff aspect-ratio property values correctly https://bugs.webkit.org/show_bug.cgi?id=226673

Reviewed by Rob Buis.

Source/WebCore:

Test: fast/css/aspect-ratio-no-relayout.html

* rendering/style/RenderStyle.cpp:
(WebCore::rareNonInheritedDataChangeRequiresLayout):

LayoutTests:

* fast/css/aspect-ratio-no-relayout-expected.txt: Added.
* fast/css/aspect-ratio-no-relayout.html: Added.


Canonical link: https://commits.webkit.org/238523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278524 268f45cc-cd09-0410-ab3c-d52691b4dbfc